--- a/source/post/2014/1099.md
+++ b/source/post/2014/1099.md
@@ -210,7 +210,7 @@ B的父节点->节点B:直接转给节点B
 ------
 这些想法最终我会尝试一个实现放在github上，实现过程中可能会碰到一些问题会导致这些想法的细微变更。届时会同步更新到blog里。并且在单元测试和压力测试通过后会把地址更新到这里。
 
-GitHub地址: https://github.com/owt5008137/libatbus
+GitHub地址: https://github.com/atframework/libatbus
 
 > Written with [StackEdit](https://stackedit.io/).
 
