--- a/source/post/2015/1142.md
+++ b/source/post/2015/1142.md
@@ -46,7 +46,7 @@ date: 2015-02-25 15:12:41
 # 新增的开源项目
 
 1.  [WP Code Highlight.js](https://github.com/owt5008137/WP-Code-Highlight.js)
-2.  [libatbus](https://github.com/owt5008137/libatbus)
+2.  [libatbus](https://github.com/atframework/libatbus)
 3.  [xresloader](https://github.com/xresloader/xresloader)
 4.  [libiniloader](https://github.com/owt5008137/libiniloader)
 5.  [client-debuger](https://github.com/owt5008137/client-debuger)
@@ -81,6 +81,6 @@ web方面我开始用[markdown](http://zh.wikipedia.org/zh/Markdown)来写作，
 
 1.  整理出通用的cmake模块
 2.  完善并整理出通用的lua模块和目前用的lua绑定机制
-3.  完善高性能的异步通信框架[libatbus](https://github.com/owt5008137/libatbus)
+3.  完善高性能的异步通信框架[libatbus](https://github.com/atframework/libatbus)
 
 其他的肯定有挺多零碎的，等2016年的总结吧。
