--- a/source/post/2018/1804.md
+++ b/source/post/2018/1804.md
@@ -59,7 +59,7 @@ type: post
 
 比如说[Rust][1]地数据类型默认是不可变的（当然很多函数式语言也这样）。像C/C++默认是可变的导致工程设计上很容易就忽略了提供一个const的函数。然后后来很难对一些场景做优化和假设。而默认不可变，可以使得编译期对很多变量、存储做优化。另外还有一个重要的设计是可变借用（```mut```）只能有一个。这样就可以准确地分析对象地生命周期然后控制对象什么时候析构。并且在多线程编程地时候，可以放心地认为这个对象不会在奇怪地地方被修改，也就不容易出现线程安全问题。
 
-神一样的枚举类型
+神一样的枚举类型和模式匹配机制
 -----------------------
 
 [Rust][1]的枚举类型也很有意思。它允许你给枚举类型的每一项绑定一个不同的值。这就延伸出了[Rust][1]对那种可成功可失败的API的推荐返回值是 ```Result<T, E>``` 。这是一个枚举值，其中有Ok(T)表示成功和成功的返回值，还有Err(E)表示失败和失败的返回值。当然如果有需要返回多种失败则可以换个有更多条目的枚举值。不同枚举值可以带出不同类型的信息。这也导致了我第一眼看这段代码的时候一直没理解这是什么奇怪的流程。
@@ -116,6 +116,91 @@ if let Err(e) = sender.send_message(&message) {
 }
 ```
 
+然后匹配还支持一些其他语言的语法糖，像这种:
+
+```rust
+let num = Some(4);
+
+match num {
+    Some(x) if x < 5 => println!("less than five: {}", x),
+    Some(x) => println!("{}", x),
+    None => (),
+}
+```
+
+还有范围匹配和忽略范围匹配：
+
+```rust
+// 按范围匹配
+let x = 'c';
+
+match x {
+    'a' ... 'j' => println!("early ASCII letter"),
+    'k' ... 'z' => println!("late ASCII letter"),
+    _ => println!("something else"),
+}
+
+
+// 忽略部分匹配项
+let numbers = (2, 4, 8, 16, 32);
+
+match numbers {
+	(first, .., last) => {
+		println!("Some numbers: {}, {}", first, last);
+	},
+}
+```
+
+还有不是很好懂的解引用语法糖：
+
+```rust
+struct Point {
+    x: i32,
+    y: i32,
+}
+
+fn main_1() {
+    let p = Point { x: 0, y: 7 };
+
+    let Point { x: a, y: b } = p;
+    assert_eq!(0, a);
+    assert_eq!(7, b);
+}
+
+
+fn main_2() {
+    let p = Point { x: 0, y: 7 };
+
+    match p {
+        Point { x, y: 0 } => println!("On the x axis at {}", x),
+        Point { x: 0, y } => println!("On the y axis at {}", y),
+        Point { x, y } => println!("On neither axis: ({}, {})", x, y),
+    }
+}
+```
+
+这里面的解出的变量是放在Object的值的部分的，看起来十分诡异。然后这个解引用语法糖和上面的范围限制的语法糖结合，还有个新的语法糖：(用 ```@``` 符号限定范围)
+
+```rust
+enum Message {
+    Hello { id: i32 },
+}
+
+let msg = Message::Hello { id: 5 };
+
+match msg {
+    Message::Hello { id: id_variable @ 3...7 } => {
+        println!("Found an id in range: {}", id_variable)
+    },
+    Message::Hello { id: 10...12 } => {
+        println!("Found an id in another range")
+    },
+    Message::Hello { id } => {
+        println!("Found some other id: {}", id)
+    },
+}
+```
+
 返回值和语句块的最后一个值
 -----------------------
 
@@ -150,7 +235,7 @@ let a = if abc {
 }
 ```
 
-这就有意思多啦。
+这就有意思多啦。挂不得不建议用 ```return``` 语句，因为这个的功能不是传统意义的 ```return``` 。
 
 生命周期和转移语义
 -----------------------
@@ -177,6 +262,94 @@ let a = if abc {
 
 [Rust][1]有着极其难看懂但是究极变态得宏。
 
+[Rust][1]是可以禁用标准库的，然而像 ```format!``` 之类是标准库的内容，格式检查的traits也属于标准库。所以看上去感觉里面的内容检查之类不像是c++编译器那样的编译器hard code实现。我大致看了一下，[Rust][1]的宏大致是 ```宏(参数) => 代码块``` 的形式。但是这个参数是可以直接 [匹配和控制AST](https://doc.rust-lang.org/reference/macros-by-example.html) 的。 而且由于后面那个跟的是代码块，所以可以更容易实现一些复杂的功能。
+
+另外它的宏还支持自定义过程宏，像这种的：
+
+```rust
+#[derive(Debug)]
+struct Point {
+    x: i32,
+    y: i32,
+}
+```
+
+等价于
+
+```rust
+struct Point {
+    x: i32,
+    y: i32,
+}
+
+use std::fmt;
+
+impl fmt::Debug for Point {
+    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
+        write!(f, "Point {{ x: {}, y: {} }}", self.x, self.y)
+    }
+}
+```
+
+相当于魔改写代码了。官方文档还有个更蛇皮的例子：
+
+```rust
+extern crate proc_macro;
+extern crate syn;   // 使用syn包来描述语法结构
+#[macro_use]
+extern crate quote; // 使用quote包来辅助扩展语法
+
+use proc_macro::TokenStream;
+
+// 为 #[derive(HelloWorld)] 提供语法支持。这样所有标记 #[derive(HelloWorld)] 的类型都会在编译期执行下面的代码
+#[proc_macro_derive(HelloWorld)]
+pub fn hello_world_derive(input: TokenStream) -> TokenStream {
+    // Construct a string representation of the type definition
+    let s = input.to_string();
+
+    // Parse the string representation
+    let ast = syn::parse_derive_input(&s).unwrap();
+
+    // Build the impl
+    let gen = impl_hello_world(&ast);
+
+    // Return the generated impl
+    gen.parse().unwrap()
+}
+
+fn impl_hello_world(ast: &syn::DeriveInput) -> quote::Tokens {
+    let name = &ast.ident;
+	// 给语法树注入hello_world()函数
+    quote! {
+        impl HelloWorld for #name {
+            fn hello_world() {
+                println!("Hello, World! My name is {}", stringify!(#name));
+            }
+        }
+    }
+}
+```
+
+然后，只要指定 ```#[derive(HelloWorld)]``` 就可以再编译期注入hello_world()函数：
+
+```rust
+extern crate hello_world;
+#[macro_use]
+extern crate hello_world_derive;
+
+use hello_world::HelloWorld;
+
+#[derive(HelloWorld)]
+struct Pancakes;
+
+fn main() {
+    Pancakes::hello_world(); // 会输出 "Hello, World! My name is Pancakes"
+}
+```
+
+上面的用法非常的蛇皮，我没进入细看，感觉format!和println!之类可能也是使用了类似的技术。
+
+至于里面用到的 ```#name``` 我粗查了下文档说是 ```#var``` 和 ```macro_rules!``` 里的 ```$var``` 类似。然后看了一眼 https://danielkeep.github.io/tlborm/book/mbe-syn-macros-in-the-ast.html 
 
 链接器
 -----------------------
