--- a/source/post/2016/1214.md
+++ b/source/post/2016/1214.md
@@ -20,7 +20,7 @@ categories:
 date: 2016-02-19 12:44:53
 ---
 
-[libatbus](https://github.com/owt5008137/libatbus)
+[libatbus](https://github.com/atframework/libatbus)
 ------
 
 经过茫茫长时间的编写+过年在家无聊补充和修正单元测试，再加上这两天的整理，终于把以前的这个关于服务器通信中间件的基本功能和相应的单元测试完成啦。还是可以热烈庆祝一下的。
@@ -31,13 +31,13 @@ date: 2016-02-19 12:44:53
 
 主要的思路还是在自动选择**共享内存**或是**tcp**或是**unix socket**进行通信。使用节点ID，屏蔽底层通信细节，屏蔽自动重连细节和节点之间自动建立直连的细节。同时基于目前的游戏服务器架构设计方式预留了一些拓展性的设计，以便于后续服务器框架的实现。主要是指全异步，树形结构，自动化的容灾设计和动态扩容缩容，不停服更新，统计等等。
 
-在实现这个[libatbus](https://github.com/owt5008137/libatbus)的过程中，为了能够跨平台并且能有比较高的性能，并且目前只有我一个人用业余时间开发，底层使用了一些开源项目。这样我们就有了性能不输TX的**tsf4g::tbus**并且支持动态通道+更加节省内存的全异步树形结构通信中间件。接下来就要准备开始折腾服务器app框架啦。并且在使用到的地方对这个[libatbus](https://github.com/owt5008137/libatbus)还会有后续的扩充。
+在实现这个[libatbus](https://github.com/atframework/libatbus)的过程中，为了能够跨平台并且能有比较高的性能，并且目前只有我一个人用业余时间开发，底层使用了一些开源项目。这样我们就有了性能不输TX的**tsf4g::tbus**并且支持动态通道+更加节省内存的全异步树形结构通信中间件。接下来就要准备开始折腾服务器app框架啦。并且在使用到的地方对这个[libatbus](https://github.com/atframework/libatbus)还会有后续的扩充。
 
 写单元测试确实花了不少时间，但是也发现了不少细节问题。目前单元测试虽说没有覆盖到100%的代码流程，但是基本上也覆盖到了80-90%。后续碰到遗漏的BUG再想方法追加单元测试吧。
 
 目前状态
 ------
-+ **Github仓库地址**： https://github.com/owt5008137/libatbus
++ **Github仓库地址**： https://github.com/atframework/libatbus
 + **CentOS 7.1 + GCC 4.8.4** 无warning，单元测试全部pass
 + **MSVC 1900(VS 2015社区版)** 两处类型转换warning（无影响），单元测试除unix socket外全部pass
 + **OSX + Clang(7.0)** 无warning，单元测试全部pass
@@ -46,7 +46,7 @@ date: 2016-02-19 12:44:53
 
 早期的压力测试，大约每个端点（单线程）内存通道大约1.2GB/s，socket大约200MB/s。近期尚未压力测试。
 
-目前[libatbus](https://github.com/owt5008137/libatbus)中的内存通道已经被单独抽出来并在生产环境中使用了比较长的时间了。
+目前[libatbus](https://github.com/atframework/libatbus)中的内存通道已经被单独抽出来并在生产环境中使用了比较长的时间了。
 
 后续计划
 ------
@@ -68,11 +68,11 @@ date: 2016-02-19 12:44:53
 
 服务器应用框架
 ------
-接下来我会开始抽时间搞游戏服务器的框架，大体上还是和现有的系统差不多，但是模块分离会做得更好一些。再加上[libatbus](https://github.com/owt5008137/libatbus)性能也会更好一些。并且会比现有的框架更简洁。
+接下来我会开始抽时间搞游戏服务器的框架，大体上还是和现有的系统差不多，但是模块分离会做得更好一些。再加上[libatbus](https://github.com/atframework/libatbus)性能也会更好一些。并且会比现有的框架更简洁。
 
 主要的思路就是，proxy-services的方式。每个逻辑服务器组由一个proxy和多个服务组成，proxy和proxy之间直接直接通过zookeeper维护状态并实现去中心化。
 
-proxy和proxy之间为[libatbus](https://github.com/owt5008137/libatbus)的兄弟节点，proxy和其下属的服务之间是父子关系。这样，在同一个proxy下的服务之间互相访问时，就会建立直接连接，而跨proxy的通信会经过proxy转发。这点和现有的服务器一样，并且额外还预留了多级的服务分层的策略。
+proxy和proxy之间为[libatbus](https://github.com/atframework/libatbus)的兄弟节点，proxy和其下属的服务之间是父子关系。这样，在同一个proxy下的服务之间互相访问时，就会建立直接连接，而跨proxy的通信会经过proxy转发。这点和现有的服务器一样，并且额外还预留了多级的服务分层的策略。
 
 由于使用zookeeper做去中心化并维护proxy组状态，所以各种服务之间可以很容易做到平行扩容。初步的想法当然还是主要针对游戏服务器，前期是手游、页游，后期可以扩展到MMO。
 
