--- a/source/post/2018/1804.md
+++ b/source/post/2018/1804.md
@@ -235,7 +235,7 @@ let a = if abc {
 }
 ```
 
-这就有意思多啦。挂不得不建议用 ```return``` 语句，因为这个的功能不是传统意义的 ```return``` 。
+这就有意思多啦。怪不得不建议用 ```return``` 语句，因为这个的功能不是传统意义的 ```return``` 。
 
 生命周期和转移语义
 -----------------------
@@ -347,9 +347,9 @@ fn main() {
 }
 ```
 
-上面的用法非常的蛇皮，我没进入细看，感觉format!和println!之类可能也是使用了类似的技术。
+上面的用法非常的蛇皮，我没进入细看，感觉format!和println!之类可能也是使用了类似的技术。而且忍不住再吐槽一下[Rust][1]的命名。 我看到 ```syn``` 的第一反应是同步机制(synchronization) ，谁知道他是语法(syntax)的缩写。
 
-至于里面用到的 ```#name``` 我粗查了下文档说是 ```#var``` 和 ```macro_rules!``` 里的 ```$var``` 类似。然后看了一眼 https://danielkeep.github.io/tlborm/book/mbe-syn-macros-in-the-ast.html 
+我看了下几个文档，还是 [The Little Book of Rust Macros][11] 对宏的解析流程描述的比较完整。
 
 链接器
 -----------------------
@@ -385,3 +385,4 @@ fn main() {
 [8]: https://rustup.rs/
 [9]: https://github.com/owt5008137/libcopp
 [10]: https://gist.github.com/owt5008137/2286768f2586521600c9fd1700cbf845
+[11]: https://danielkeep.github.io/tlborm/book/index.html
