--- a/source/post/2018/1804.md
+++ b/source/post/2018/1804.md
@@ -67,11 +67,11 @@ type: post
 ```rust
 // Send the message
 match sender.send_message(&message) {
-	Ok(()) => (),
-	Err(e) => {
-		println!("Send failed: {:?}", e);
-		break;
-	}
+    Ok(()) => (),
+    Err(e) => {
+        println!("Send failed: {:?}", e);
+        break;
+    }
 }
 ```
 
@@ -79,30 +79,30 @@ match sender.send_message(&message) {
 
 ```rust
 match message {
-	OwnedMessage::Close(_) => {
-		// Got a close message, so send a close message and return
-		let _ = tx_1.send(OwnedMessage::Close(None));
-		return;
-	}
-	OwnedMessage::Ping(data) => {
-		match tx_1.send(OwnedMessage::Pong(data)) {
-			// Send a pong in response
-			Ok(()) => (),
-			Err(e) => {
-				println!("Send Pong failed: {:?}", e);
-				return;
-			}
-		}
-	}
-	// print what we received
-	OwnedMessage::Text(data) => {
-		println!("Response: {:?}", json::stringify(data));
-		let _ = tx_1.send(OwnedMessage::Close(None));
-	}
-	// print what we received
-	_ => {
-		let _ = tx_1.send(OwnedMessage::Close(None));
-	}
+    OwnedMessage::Close(_) => {
+        // Got a close message, so send a close message and return
+        let _ = tx_1.send(OwnedMessage::Close(None));
+        return;
+    }
+    OwnedMessage::Ping(data) => {
+        match tx_1.send(OwnedMessage::Pong(data)) {
+            // Send a pong in response
+            Ok(()) => (),
+            Err(e) => {
+                println!("Send Pong failed: {:?}", e);
+                return;
+            }
+        }
+    }
+    // print what we received
+    OwnedMessage::Text(data) => {
+        println!("Response: {:?}", json::stringify(data));
+        let _ = tx_1.send(OwnedMessage::Close(None));
+    }
+    // print what we received
+    _ => {
+        let _ = tx_1.send(OwnedMessage::Close(None));
+    }
 }
 ```
 
@@ -112,7 +112,7 @@ match message {
 
 ```rust
 if let Err(e) = sender.send_message(&message) {
-	println!("Send failed: {:?}", e);
+    println!("Send failed: {:?}", e);
 }
 ```
 
@@ -145,9 +145,9 @@ match x {
 let numbers = (2, 4, 8, 16, 32);
 
 match numbers {
-	(first, .., last) => {
-		println!("Some numbers: {}, {}", first, last);
-	},
+    (first, .., last) => {
+        println!("Some numbers: {}, {}", first, last);
+    },
 }
 ```
 
@@ -216,9 +216,9 @@ fn print_usage() {
 
 ```rust
 let a = if abc {
-	123
+    123
 } else {
-	456
+    456
 }
 ```
 
@@ -226,12 +226,12 @@ let a = if abc {
 
 ```rust
 let a = if abc {
-	match def {
+    match def {
         Ok(m) => m,
         Err(f) => panic!(f.to_string()),
     };
 } else {
-	456
+    456
 }
 ```
 
@@ -252,10 +252,10 @@ let a = if abc {
 
 自动转移（move）语意和api强制关注坑（str拷贝，未处理的match）
 
-	泛型 <T: Display + Clone> 或<T> where T: Display + Clone
-		操作符重载 PartialOrd
-		Mut => Copy
-		println!格式化字符串 => ToString(标准库的Display::to_string函数)
+    泛型 <T: Display + Clone> 或<T> where T: Display + Clone
+        操作符重载 PartialOrd
+        Mut => Copy
+        println!格式化字符串 => ToString(标准库的Display::to_string函数)
 
 宏
 -----------------------
@@ -319,7 +319,7 @@ pub fn hello_world_derive(input: TokenStream) -> TokenStream {
 
 fn impl_hello_world(ast: &syn::DeriveInput) -> quote::Tokens {
     let name = &ast.ident;
-	// 给语法树注入hello_world()函数
+    // 给语法树注入hello_world()函数
     quote! {
         impl HelloWorld for #name {
             fn hello_world() {
@@ -349,10 +349,7 @@ fn main() {
 
 上面的用法非常的蛇皮，我没进入细看，感觉format!和println!之类可能也是使用了类似的技术。而且忍不住再吐槽一下[Rust][1]的命名。 我看到 ```syn``` 的第一反应是同步机制(synchronization) ，谁知道他是语法(syntax)的缩写。
 
-我看了下几个文档，还是 [The Little Book of Rust Macros][11] 对宏的解析流程描述的比较完整。
-
-链接器
------------------------
+我看了下几个文档，还是 [The Little Book of Rust Macros][11] 对宏的解析流程描述的比较完整。[Rust][1]的宏还有一个挺有意思的地方是它受代码块的作用域的限制。现在看起来有一些复杂的概念，而且2018年不是要出2.0版，来支持await么？这个后面再细看吧。
 
 工程化
 ========================
@@ -362,13 +359,92 @@ fn main() {
 
 工具链管理([rustup.rs][8])
 ------------------------
+[Rust][1] 提供了一个官方的工具链管理器叫[rustup.rs][8] 。这个工具统一了我们管理[Rust][1]的工具链、库、文档的流程。使用起来也很方便。目前功能和说明还比较简单，只在 https://github.com/rust-lang-nursery/rustup.rs 上有，但是足够使用了。
+
+初步接触下来[Rust][1]只提供了编译器，链接器和汇编器还是用了gcc或者MSVC的。所以如果依赖C/C++的库的话，可以写编译脚本，然后直接引进来，还算方便。也可以直接用[rustup.rs][8]下载预编译好的各种平台的工具链，当然包含链接器。
+
+当前版本已经提供了下面这些平台的支持。
+
++ aarch64-apple-ios
++ aarch64-linux-android
++ aarch64-unknown-cloudabi
++ aarch64-unknown-fuchsia
++ aarch64-unknown-linux-gnu
++ aarch64-unknown-linux-musl
++ arm-linux-androideabi
++ arm-unknown-linux-gnueabi
++ arm-unknown-linux-gnueabihf
++ arm-unknown-linux-musleabi
++ arm-unknown-linux-musleabihf
++ armv5te-unknown-linux-gnueabi
++ armv7-apple-ios
++ armv7-linux-androideabi
++ armv7-unknown-cloudabi-eabihf
++ armv7-unknown-linux-gnueabihf
++ armv7-unknown-linux-musleabihf
++ armv7s-apple-ios
++ asmjs-unknown-emscripten
++ i386-apple-ios
++ i586-pc-windows-msvc
++ i586-unknown-linux-gnu
++ i586-unknown-linux-musl
++ i686-apple-darwin
++ i686-linux-android
++ i686-pc-windows-gnu
++ i686-pc-windows-msvc
++ i686-unknown-cloudabi
++ i686-unknown-freebsd
++ i686-unknown-linux-gnu
++ i686-unknown-linux-musl
++ mips-unknown-linux-gnu
++ mips-unknown-linux-musl
++ mips64-unknown-linux-gnuabi64
++ mips64el-unknown-linux-gnuabi64
++ mipsel-unknown-linux-gnu
++ mipsel-unknown-linux-musl
++ powerpc-unknown-linux-gnu
++ powerpc64-unknown-linux-gnu
++ powerpc64le-unknown-linux-gnu
++ s390x-unknown-linux-gnu
++ sparc64-unknown-linux-gnu
++ sparcv9-sun-solaris
++ wasm32-unknown-emscripten
++ wasm32-unknown-unknown
++ x86_64-apple-darwin
++ x86_64-apple-ios
++ x86_64-linux-android
++ x86_64-pc-windows-gnu
++ x86_64-pc-windows-msvc
++ x86_64-rumprun-netbsd
++ x86_64-sun-solaris
++ x86_64-unknown-cloudabi
++ x86_64-unknown-freebsd
++ x86_64-unknown-fuchsia
++ x86_64-unknown-linux-gnu (default)
++ x86_64-unknown-linux-gnux32
++ x86_64-unknown-linux-musl (installed)
++ x86_64-unknown-netbsd
++ x86_64-unknown-redox
+
+这些是编译目标，然后工具链和库，也给了个[平台支持状况](https://forge.rust-lang.org/platform-support.html)的文档。基本上主要的平台都覆盖全了（除了很老的环境）。
 
 ### Native库依赖和交叉编译
 
+上面也能看到，[rustup.rs][8]还提供了可以直接下载不依赖本地系统的工具链，这使得交叉编译方便了很多。比如可以用 ```x86_64-unknown-linux-musl``` 来编译不依赖发行版和系统库的Linux可执行程序，也可以 ```armv7-unknown-linux-musleabihf``` 编个什么程序扔路由器上跑。之前看到一些用[go][7]写的工具，可以直接很容易地编译出嵌入式设备无依赖地二进制，就觉得很惊艳。现在[Rust][1]也能做到了，我打算过段时间想个什么小工具扔家里路由器上玩玩。
+
 构建系统和包管理
 ------------------------
+年代比较久的语言（比如C/C++）里都没有统一的构建工具，所以各个不同的平台有很多的轮子。很多语言像python、java之类都有一些趋于统一的2-3个软件包管理器和构建工具，而像C/C++就极其混乱。GNU系用得多的是Makefile，近期还有个新的叫Ninja。macOS和Visual Studio系都有自己的工程文件格式，像Visual Studio还有不止一种（MSBUILD、NMAKE和基于VS工程文件的系统等等）。然后GNU系呢，因为Makefile的功能十分有限、和其他语言的集成也不方便，还晦涩难懂，所以又产生了一系列的生成Makefile的工具，像automake、autoconf、cmake等等。还有一些平台采用自己的构建系统，像gradle、yotta等等。
+
+另外，包管理也完全不统一。Linux的发行版几乎都用自己的包管理工具，像Debian系用apt，Red Hat系用yum和的最近高出了个dnf，BSD系用ports，SUSE系用zypper。还有一些平台用pacman和brew之类的。微软又搞了个vcpkg。
+
+这些都导致管理多平台和多目标的程序非常呃麻烦，费时费力。好在[Rust][1]在这直接有一个规范化的系统。
 
 ### 构建系统 ([cargo][6])
+
+首先是构建系统是[cargo][6]。用于构建[Rust][1]的项目。[cargo][6]目前的文档还比较简单，详见 https://doc.rust-lang.org/cargo/ 。基本上文档就是个快速上手版本，里面有些细节功能我没有写，我之前想找怎么附加链接选项就没查到。
+
+对于依赖库的构建，我看到很多仓库里是写了个build.rs来指定构建流程的，文档里也只是说可以指定编译脚本，但是没有更多细节了，光看文档不知道这个build.rs有哪些功能要怎么写。而且它是怎么当脚本执行的？难不成是先编译build.rs然后执行完再构建依赖库或二进制的吗？
 
 ### 包管理 ([crates.io][5])
 
