笔记一个文档

--- a/source/post/2018/1804.md
+++ b/source/post/2018/1804.md
@@ -347,7 +347,7 @@ fn main() {
 
 上面的用法非常的蛇皮，我没进入细看，感觉format!和println!之类可能也是使用了类似的技术。而且忍不住再吐槽一下[Rust][1]的命名。 我看到 ```syn``` 的第一反应是同步机制(synchronization) ，谁知道他是语法(syntax)的缩写。
 
-我看了下几个文档，还是 [The Little Book of Rust Macros][11] 对宏的解析流程描述的比较完整。[Rust][1]的宏还有一个挺有意思的地方是它受代码块的作用域的限制。现在看起来有一些复杂的概念，而且2018年不是要出2.0版，来支持await么？这个后面再细看吧。
+我看了下几个文档，还是 [The Little Book of Rust Macros][11] 对宏的解析流程描述的比较完整。[Rust][1]的宏还有一个挺有意思的地方是它受代码块的作用域的限制。现在看起来有一些复杂的概念，而且2018年说是要出2.0版，来支持await么？这个后面再细看吧。
 
 工程化
 ========================
@@ -499,7 +499,7 @@ fn main() {
 
 写在最后
 ========================
-前段时间我已经用rust简单地写了个命令行小工具给服务器用。接下来我会更深入研究下IO复用地部分和高并发编程地部分然后优化这个小工具，再来写总结吧。
+前段时间我已经用rust简单地写了个命令行小工具给服务器用。接下来我会更深入研究下IO复用地部分和高并发编程地部分然后优化这个小工具，再来写第二阶段总结吧。
 
 [1]: https://rust-lang.org/
 [2]: https://kaisery.github.io/trpl-zh-cn/
