--- a/source/post/2018/1804.md
+++ b/source/post/2018/1804.md
@@ -477,6 +477,8 @@ fn main() {
 
 ### 文档管理 ([https://docs.rs][4])
 
+对应包管理 ([https://crates.io][5]) 系统，[Rust][1]也附带了统一的文档管理系统 [https://docs.rs][4]。基本上发布包的文档都可以在这里找到，结构还是挺简单易懂的。
+
 [Rust][1]自带了文档系统。它的 ```//``` 是普通注释， ```///``` 是给函数或模块的文档注释， ```//!``` 是给文件的文档注释。文档采用Markdown格式。文档里没说，但是我看了下现在版本里的代码和注释，它使用了[pulldown-cmark][16](提供基于[CommonMark][17]的功能)在基础Markdown的基础上增加了：
 
 * 目录(TOC):
@@ -493,13 +495,13 @@ fn main() {
   + **compile_fail** => 标识[Rust][1]代码会编译失败
   + **should_panic** => 标识[Rust][1]代码能够编译，但执行会 ***panic***
 
-最后还可以设置服务器来运行sample程序，主题现在似乎只有light/dark的选项。
-
-对应包管理 ([https://crates.io][5]) 系统，[Rust][1]也附带了统一的文档管理系统 [https://docs.rs][4]。基本上发布包的文档都可以在这里找到，结构还是挺简单易懂的。
+最后还可以设置服务器来运行sample程序，主题现在似乎只有light/dark的选项。文档系统还支持通过增加metadata来增加功能，比如这个crate： https://docs.rs/katex-doc/ 就通过Katex给文档系统增加了公式支持。
 
 写在最后
 ========================
 前段时间我已经用rust简单地写了个命令行小工具给服务器用。接下来我会更深入研究下IO复用地部分和高并发编程地部分然后优化这个小工具，再来写第二阶段总结吧。
+
+再记一下国内[Rust][1]社区， https://rust.cc 。
 
 [1]: https://rust-lang.org/
 [2]: https://kaisery.github.io/trpl-zh-cn/
