--- a/source/post/2018/1804.md
+++ b/source/post/2018/1804.md
@@ -449,6 +449,20 @@ fn main() {
 
 这些是编译目标，然后工具链和库，也给了个[平台支持状况](https://forge.rust-lang.org/platform-support.html)的文档。基本上主要的平台都覆盖全了（除了很老的环境）。
 
+比如我这里本地安装交叉编译Linux-x86_64的工具链（主要为了发布的二进制不依赖发行版）并且使用nightly版本（主要有些新功能只能nightly支持）的安装流程就是：
+
+```bash
+rustup self update
+rustup install nightly
+rustup run nightly rustc --version
+rustup default nightly
+rustup update
+rustup install stable-x86_64-unknown-linux-gnu
+rustup install nightly-x86_64-unknown-linux-gnu
+rustup target add --toolchain stable x86_64-unknown-linux-musl
+rustup target add --toolchain nightly x86_64-unknown-linux-musl
+```
+
 ### Native库依赖和交叉编译
 
 上面也能看到，[rustup.rs][8]还提供了可以直接下载不依赖本地系统的工具链，这使得交叉编译方便了很多。比如可以用 ```x86_64-unknown-linux-musl``` 来编译不依赖发行版和系统库的Linux可执行程序，也可以 ```armv7-unknown-linux-musleabihf``` 编个什么程序扔路由器上跑。之前看到一些用[go][7]写的工具，可以直接很容易地编译出嵌入式设备无依赖地二进制，就觉得很惊艳。现在[Rust][1]也能做到了，我打算过段时间想个什么小工具扔家里路由器上玩玩。
