--- a/source/post/2018/1805.md
+++ b/source/post/2018/1805.md
@@ -41,68 +41,69 @@ type: post
 然后尝试使用上面的流程改造我们的 **gmtools-cli** 。原先我是直接开LTO+Release编译的，编出的文件大小为4.4MB（4520728字节）。
 
 1. Release编译只要构建命令用 ```cargo build --release``` 就可以了，开size优化需要加个配置选项
-  ```
-  [profile.release]
-  opt-level = "z"
-  
-  [profile.dev]
-  opt-level = "z"
-  ```
+```
+[profile.release]
+opt-level = "z"
+
+[profile.dev]
+opt-level = "z"
+```
 
 2. LTO加几个配置选项就行了
-  ```
-  [profile.release]
-  lto = true
-  codegen-units = 1
-  incremental = false
+```
+[profile.release]
+lto = true
+codegen-units = 1
+incremental = false
 
-  [profile.dev]
-  lto = true
-  codegen-units = 1
-  incremental = false
-  ```
+[profile.dev]
+lto = true
+codegen-units = 1
+incremental = false
+```
 
 3. 重新编译标准库(std)和核心库(core)比较麻烦，而且我本地的环境报```could not find native static library `c`, perhaps an -L flag is missing?```。原文里自己编译这两个库反而体积变大了，我就先忽略这个了
 4. 这个要改源码和配置文件
-  首先是 **Cargo.toml** 里要增加:
-  ```
-  [features]
-  system-alloc = []
-  ```
-  然后代码增加:
-  ```rust
-  #![feature(global_allocator)]
-  #![feature(allocator_api)]
-  // When the `system-alloc` feature is used, use the System Allocator
-  #[cfg(feature = "system-alloc")]
-  mod allocator {
-      use std::heap::System;
+首先是 **Cargo.toml** 里要增加:
+```
+[features]
+system-alloc = []
+```
+然后代码增加:
+```rust
+#![feature(global_allocator)]
+#![feature(allocator_api)]
+// When the `system-alloc` feature is used, use the System Allocator
+#[cfg(feature = "system-alloc")]
+mod allocator {
+    use std::heap::System;
 
-      #[global_allocator]
-      pub static mut THE_ALLOC: System = System;
-  }
+    #[global_allocator]
+    pub static mut THE_ALLOC: System = System;
+}
 
-  // When the `system-alloc` feature is not used, do nothing,
-  // retaining the default functionality (using jemalloc)
-  #[cfg(not(feature = "system-alloc"))]
-  mod allocator {
-      #[allow(dead_code)]
-      pub static THE_ALLOC: () = ();
-  }
+// When the `system-alloc` feature is not used, do nothing,
+// retaining the default functionality (using jemalloc)
+#[cfg(not(feature = "system-alloc"))]
+mod allocator {
+    #[allow(dead_code)]
+    pub static THE_ALLOC: () = ();
+}
 
-  #[allow(unused_imports)]
-  use allocator::THE_ALLOC;
-  ```
-  最后构建命令加 ```--features system-alloc```
+#[allow(unused_imports)]
+use allocator::THE_ALLOC;
+```
+最后构建命令加 ```--features system-alloc```
 
 5. 这个就是移除调试信息，把 ```[profile.release]``` 的配置 panic = "abort" 就可以了
-  ```
-  [profile.release]
-  panic = "abort"
+```
+[profile.release]
+panic = "abort"
 
-  [profile.dev]
-  panic = "abort"
-  ```
+[profile.dev]
+panic = "abort"
+```
+
 6. 直接执行 ```strip 二进制``` 即可
 7. 参考命令 ```upx --ultra-brute 二进制```
 
@@ -110,12 +111,12 @@ type: post
 
 来个更直观的对比。
 
-|  对比项          | 压缩前                                                       |  压缩后                                                              |
-|-----------------|-------------------------------------------------------------|---------------------------------------------------------------------|
-| 编译选项         | release,opt-level=3,lto=true,codegen-units=3,panic="unwind" | release,opt-level="z",lto=true,codegen-units=1,panic="abort",strip  |
-| 原始编译结果      | 4.4MB（4520728字节）                                         | 2.1MB(2187784字节) -- 减少51.6%                                      |  
-| 仅执行strip      | 4.4MB（4520728字节）                                         | 844K(863312字节) -- 减少80.9%                                        |
-| 执行strip和upx   | 4.4MB（4520728字节）                                         | 274K(280264字节) -- 减少93.8%                                        |
+| 对比项            | 压缩前                                                        | 压缩后                                                                |
+| ----------------- | ------------------------------------------------------------- | --------------------------------------------------------------------- |
+| 编译选项          | release,opt-level=3,lto=true,codegen-units=3,panic="unwind"   | release,opt-level="z",lto=true,codegen-units=1,panic="abort",strip    |
+| 原始编译结果      | 4.4MB（4520728字节）                                          | 2.1MB(2187784字节) -- 减少51.6%                                       |  |
+| 仅执行strip       | 4.4MB（4520728字节）                                          | 844K(863312字节) -- 减少80.9%                                         |
+| 执行strip和upx    | 4.4MB（4520728字节）                                          | 274K(280264字节) -- 减少93.8%                                         |
 
 其他C/C++的压缩
 ========================
