draw graph for libcopp

--- a/source/post/2018/1806.md
+++ b/source/post/2018/1806.md
@@ -25,11 +25,18 @@ type: post
 
 ## libcopp v2内存布局
 
-开发[libcopp][3]v2版本的最大目的是优化allocator的接口和内存碎片。
+开发[libcopp][3] v2版本的最大目的是优化allocator的接口和内存碎片。
 
 原来的allocator虽然是可定制的，但是是内置的。每次创建一个allocator对象，不同allocator之间共享数据只能通过全局数据或者TLS数据。现在则可以传入allocator了。这也是为后续的共享栈池做准备。
 
-其次就是优化结构布局以优化内存碎片问题。
+其次就是优化结构布局以优化内存碎片问题。在v1版本里，一个很重要的设计要点是各项组件可拆卸，就是说一些设计模式层面的东西比如协程任务、任务管理、等待和依赖关系等是可选的。同时栈分配器也可以是多种选择，采用系统地址映射加保护帧、采用malloc或者自定义分配器。为了各项组件尽可能解耦和易于组合，模块间较少采用组合关系，较多采用了引用关系，原来的协程任务结构大致上是这样的。
+
+![1806-01.png](1806-01.png)
+
+可以看得出来一个协程运行的时候对象数量很多。这样的话碎片也很多，虽然现代化的malloc实现能大幅缓解碎片问题，但是终归是有一些开销。所以v2版本在这方面就有了一系列优化。(注意执行栈是自顶向下增长)
+
+![1806-02.png](1806-02.png)
+
 
 ## 栈池
 
