每天写一点,想到一点写一点

--- a/source/post/2018/1806.md
+++ b/source/post/2018/1806.md
@@ -33,14 +33,21 @@ type: post
 
 ![1806-01.png](1806-01.png)
 
-可以看得出来一个协程运行的时候对象数量很多。这样的话碎片也很多，虽然现代化的malloc实现能大幅缓解碎片问题，但是终归是有一些开销。所以v2版本在这方面就有了一系列优化。(注意执行栈是自顶向下增长)
+可以看得出来一个协程运行的时候对象数量很多。这样的话碎片也很多，虽然现代化的malloc实现能大幅缓解碎片问题，但是终归是有一些开销。上面图里是一个比较完整的结构关系，实际使用中有些组件如果不需要是可以移除掉的，比如 **cotask** 相关的部分。
+
+v2版本在这方面就有了一些优化。基本思路是每个协程执行的时候都必然会分配一个执行栈，那么其实我们在执行栈上开辟一块空间放这些对象(执行栈是自顶向下增长，所以可以放到栈空间的最后面)。同时还可以开辟出一块用户私有数据块，用于方便使用者可以存放一些 [TrivialType][4] 的私有数据，也不需要额外的动态分配。当然，各项组件的可自由组装和裁剪的特性也是必须保留的，我们的组织结构如下图所示:
 
 ![1806-02.png](1806-02.png)
 
-
 ## 栈池
 
+在压力测试过程中，我们发现其实相对于业务逻辑，协程的创建和切换的开销占比非常小。但是有一样的开销很高，那就是缺页中断。我们知道在Linux中，在内存地址被实际使用前，是不会有物理内存页映射进来的。在第一次访问未映射地址的时候（特别是协程第一次切入到执行栈），会触发一次缺页中断，然后由操作系统把实际物理页映射上去，然后再继续执行。这个缺页中断引起的开销是其他协程创建流程总和的大约10倍左右。所以为了减缓这种开销，我们引入了一个新的stack allocator - 栈池allocator。目前栈池的实现是一个比较简单的但基本可用版本，并且初步实现了可以根据负载自动调整池子大小的功能。这样在低负载服务中可以有效减少内存消耗，在高负载服务中也能提高复用率。
+
 ## 性能对比
+
+从压测结果上看，v2版本对v1的CPU L1缓存命中率是有下降的。我们分析这是因为v1版本中对象是碎片化的关系。因为碎片化的对象底层有 **jemalloc** 的加持，导致即便是在手动构造的栈cache miss的压力测试中，由于我们压测的CPU的L1 cache是32KB=8way\*64sets\*64B的，导致访问前一个对象的时候，后一个对象还是有部分数据被加载到了缓存中，小对象的缓存命中率还是比较高。这其实也是不符合实际应用场景的。
+
+因为一般情况下我们并不是为了跑分而优化，协程接口一般在切换上下文后逻辑会更加复杂。所以为了尽可能贴近实际应用，我们尽量构造cache miss的用例来评估性能。
 
 # 对象路由
 
@@ -69,3 +76,4 @@ type: post
 [1]: https://github.com/atframework/atsf4g-co/
 [2]: https://github.com/atframework/atsf4g-co/tree/sample_solution
 [3]: https://github.com/owt5008137/libcopp
+[4]: http://en.cppreference.com/w/cpp/concept/TrivialType
