测试设置腾讯云+社区

--- a/source/post/2018/1805.md
+++ b/source/post/2018/1805.md
@@ -111,12 +111,12 @@ panic = "abort"
 
 来个更直观的对比。
 
-| 对比项            | 压缩前                                                        | 压缩后                                                                |
-| ----------------- | ------------------------------------------------------------- | --------------------------------------------------------------------- |
-| 编译选项          | release,opt-level=3,lto=true,codegen-units=3,panic="unwind"   | release,opt-level="z",lto=true,codegen-units=1,panic="abort",strip    |
-| 原始编译结果      | 4.4MB（4520728字节）                                          | 2.1MB(2187784字节) -- 减少51.6%                                       |  |
-| 仅执行strip       | 4.4MB（4520728字节）                                          | 844K(863312字节) -- 减少80.9%                                         |
-| 执行strip和upx    | 4.4MB（4520728字节）                                          | 274K(280264字节) -- 减少93.8%                                         |
+| 对比项         | 压缩前                                                      | 压缩后                                                             |
+| -------------- | ----------------------------------------------------------- | ------------------------------------------------------------------ |
+| 编译选项       | release,opt-level=3,lto=true,codegen-units=3,panic="unwind" | release,opt-level="z",lto=true,codegen-units=1,panic="abort",strip |
+| 原始编译结果   | 4.4MB（4520728字节）                                        | 2.1MB(2187784字节) -- 减少51.6%                                    |  |
+| 仅执行strip    | 4.4MB（4520728字节）                                        | 844K(863312字节) -- 减少80.9%                                      |
+| 执行strip和upx | 4.4MB（4520728字节）                                        | 274K(280264字节) -- 减少93.8%                                      |
 
 其他C/C++的压缩
 ========================
@@ -133,6 +133,8 @@ Android下用[UPX][4]看到说需要几个小patch（我没试，这里只是记
 + [UPX][4]需要二进制文件大于40K，如果不够大可以加个全局变量搞大这个.so。
 + 在native代码中需要声明 ```extern "C" {void _init(void){}}``` 函数，用于在编译时生成 **_init** 段。（[UPX][4]要求二进制文件必须存在init段，但是android的.so可能没有）
   + 或者也可以自定义初始化代码， ```extern "C" {void my_init(void){}}``` ，然后编译时在 ```Android.mk``` 里加入 ```LOCAL_LDFLAGS += -Wl,-init=my_init``` 。来指定自己的初始化加载函数
+
+<div style="display:none;">我的博客即将搬运同步至腾讯云+社区，邀请大家一同入驻：https://cloud.tencent.com/developer/support-plan?invite_code=3n1gmsmrgq2ok</div>
 
 [1]: https://rust-lang.org/
 [2]: https://www.gnu.org/software/binutils/
