--- a/source/post/2018/1806.md
+++ b/source/post/2018/1806.md
@@ -47,7 +47,37 @@ v2版本在这方面就有了一些优化。基本思路是每个协程执行的
 
 从压测结果上看，v2版本对v1的CPU L1缓存命中率是有下降的。我们分析这是因为v1版本中对象是碎片化的关系。因为碎片化的对象底层有 **jemalloc** 的加持，导致即便是在手动构造的栈cache miss的压力测试中，由于我们压测的CPU的L1 cache是32KB=8way\*64sets\*64B的，导致访问前一个对象的时候，后一个对象还是有部分数据被加载到了缓存中，小对象的缓存命中率还是比较高。这其实也是不符合实际应用场景的。
 
-因为一般情况下我们并不是为了跑分而优化，协程接口一般在切换上下文后逻辑会更加复杂。所以为了尽可能贴近实际应用，我们尽量构造cache miss的用例来评估性能。
+因为一般情况下我们并不是为了跑分而优化，协程接口一般在切换上下文后逻辑会更加复杂。所以为了尽可能贴近实际应用，我们尽量构造cache miss的用例来评估性能。同时我们大部分项目上线的时候编译选项都是-O2，所以在压力测试的时候我们也尽量使用O2级别的编译优化（有些系统自带包会用O3），编译选项是 ```-O2 -g -DNDEBUG -ggdb   -Wall -Werror -fPIC``` 。
+
+## 压力测试机环境
+
+| 环境名称             | 值                                      |
+|----------------------|-----------------------------------------|
+| 系统                 | Linux kernel 3.10.104(Docker)           |
+| CPU                  | E5-2630 v2 @ 2.60GHz \* 12              |
+| L1 Cache             | 64Bytes\*64sets\*8ways=32KB             |
+| 系统负载             | 1.27 1.29 1.17                          |
+| 内存占用             | 2.86GB(used)/2.84GB(cached)/2GB(free)   |
+| CMake                | 3.11.3                                  |
+| GCC版本              | 8.1.0                                   |
+| Golang版本           | 1.10.2                                  |
+| Boost版本(libgo依赖) | 1.67.0                                  |
+
+## 压力测试对比
+
+| 组件(Avg)              | 协程数：1 切换开销 | 协程数：1000 创建开销 | 协程数：1000 切换开销 | 协程数：30000 创建开销 | 协程数：30000 切换开销 |
+|------------------------|--------------------|-----------------------|-----------------------|------------------------|------------------------|
+| libcopp                | 60 ns              | 3.7 us                | 91 ns                 | 3.5 us                 | 239 ns                 |
+| 切换开销libcopp+栈池   | 60 ns              | 109 ns                | 90 ns                 | 261 ns                 | 238 ns                 |
+| libcopp+libcotask      | 79 ns              | 4.2 us                | 124 ns                | 3.8 us                 | 338 ns                 |
+| libcopp+libcotask+栈池 | 80 ns              | 246 ns                | 126 ns                | 340 ns                 | 335 ns                 |
+| goroutine(golang)      | 464 ns             | 578 ns                | 538 ns                | 1.4 us                 | 799 ns                 |
+| linux ucontext         |                    |                       |                       |                        |                        |
+| [libgo][5]             |                    |                       |                       |                        |                        |
+| [libco][6]             |                    |                       |                       |                        |                        |
+
++ libcopp/libcotask测试代码：https://github.com/owt5008137/libcopp/tree/v2/sample
++ goroutine测试代码: https://gist.github.com/owt5008137/2286768f2586521600c9fd1700cbf845
 
 # 对象路由
 
@@ -77,3 +107,5 @@ v2版本在这方面就有了一些优化。基本思路是每个协程执行的
 [2]: https://github.com/atframework/atsf4g-co/tree/sample_solution
 [3]: https://github.com/owt5008137/libcopp
 [4]: http://en.cppreference.com/w/cpp/concept/TrivialType
+[5]: https://github.com/yyzybb537/libgo
+[6]: https://github.com/Tencent/libco
