--- a/source/post/2018/1806.md
+++ b/source/post/2018/1806.md
@@ -7,17 +7,14 @@ date: 2018-05-28 20:23:31
 draft: true
 id: 1806
 tags: 
-  - atsf4g
-  - atframework
-  - 服务器
-  - 框架
-title: atsf4g-co的进化：协程框架v2和自适应栈池、对象路由系统
+  - libcopp
+  - stack pool
+  - benchmark
+  - coroutine
+  - goroutine
+title: 协程框架(libcopp)v2优化、自适应栈池和同类库的Benchmark对比
 type: post
 ---
-
-# 前言
-
-年前就计划把以前项目的一些理念和设计方案融合到sample里来。但是内容比较多，一直也没太多时间去完成它。所幸虽然断断续续但终归是完成了。并且在之前的一些实现上还做了一些细节的优化。内容比较多我感觉我自己写的也比较乱，仅当作一个参照和小计吧。
 
 # 协程系统优化
 
@@ -47,61 +44,116 @@ v2版本在这方面就有了一些优化。基本思路是每个协程执行的
 
 从压测结果上看，v2版本对v1的CPU L1缓存命中率是有下降的。我们分析这是因为v1版本中对象是碎片化的关系。因为碎片化的对象底层有 **jemalloc** 的加持，导致即便是在手动构造的栈cache miss的压力测试中，由于我们压测的CPU的L1 cache是32KB=8way\*64sets\*64B的，导致访问前一个对象的时候，后一个对象还是有部分数据被加载到了缓存中，小对象的缓存命中率还是比较高。这其实也是不符合实际应用场景的。
 
-因为一般情况下我们并不是为了跑分而优化，协程接口一般在切换上下文后逻辑会更加复杂。所以为了尽可能贴近实际应用，我们尽量构造cache miss的用例来评估性能。同时我们大部分项目上线的时候编译选项都是-O2，所以在压力测试的时候我们也尽量使用O2级别的编译优化（有些系统自带包会用O3），编译选项是 ```-O2 -g -DNDEBUG -ggdb   -Wall -Werror -fPIC``` 。
+因为一般情况下我们并不是为了跑分而优化，协程接口一般在切换上下文后逻辑会更加复杂。所以为了尽可能贴近实际应用，我们尽量构造cache miss的用例来评估性能。同时我们大部分项目上线的时候编译选项都是-O2，所以在压力测试的时候我们也尽量使用O2级别的编译优化（有些系统自带包会用O3），编译选项是 ```-O2 -g -DNDEBUG -ggdb   -Wall -Werror -fPIC``` 。项目中一般会启用安全性较高的方案，所以我们的压力测试中，只要是可以定义栈分配的库，栈都使用mmap出来4K对齐的页和使用mprotect尾部的方式来维护栈空间。
 
 ## 压力测试机环境
 
-| 环境名称             | 值                                      |
-|----------------------|-----------------------------------------|
-| 系统                 | Linux kernel 3.10.104(Docker)           |
-| CPU                  | E5-2630 v2 @ 2.60GHz \* 12              |
-| L1 Cache             | 64Bytes\*64sets\*8ways=32KB             |
-| 系统负载             | 1.27 1.29 1.17                          |
-| 内存占用             | 2.86GB(used)/2.84GB(cached)/2GB(free)   |
-| CMake                | 3.11.3                                  |
-| GCC版本              | 8.1.0                                   |
-| Golang版本           | 1.10.2                                  |
-| Boost版本(libgo依赖) | 1.67.0                                  |
+| 环境名称                       | 值                                                  |
+|--------------------------------|-----------------------------------------------------|
+| 系统                           | Linux kernel 3.10.104(Docker)                       |
+| CPU                            | E5-2630 v2 @ 2.60GHz \* 12                          |
+| L1 Cache                       | 64Bytes\*64sets\*8ways=32KB                         |
+| 系统负载                       | 1.27 1.29 1.17                                      |
+| 内存占用                       | 2.86GB(used)/2.84GB(cached)/2GB(free)               |
+| CMake                          | 3.11.3                                              |
+| GCC版本                        | 8.1.0                                               |
+| [Golang][7]版本                | [1.10.2][8]                              (20180216) |
+| [Boost版本][9]([libgo][5]依赖) | [1.67.0][10]                                        |
+| libco版本                      | 0af0b89998f2f691208f530cacb799ed033098f6 (20180605) |
+| libcopp                        | 8ce6dfef26ccf6a1ecb55336dde18a6526f76666 (20170423) |
 
 ## 压力测试对比
 
-| 组件(Avg)              | 协程数：1 切换开销 | 协程数：1000 创建开销 | 协程数：1000 切换开销 | 协程数：30000 创建开销 | 协程数：30000 切换开销 |
-|------------------------|--------------------|-----------------------|-----------------------|------------------------|------------------------|
-| libcopp                | 60 ns              | 3.7 us                | 91 ns                 | 3.5 us                 | 239 ns                 |
-| 切换开销libcopp+栈池   | 60 ns              | 109 ns                | 90 ns                 | 261 ns                 | 238 ns                 |
-| libcopp+libcotask      | 79 ns              | 4.2 us                | 124 ns                | 3.8 us                 | 338 ns                 |
-| libcopp+libcotask+栈池 | 80 ns              | 246 ns                | 126 ns                | 340 ns                 | 335 ns                 |
-| goroutine(golang)      | 464 ns             | 578 ns                | 538 ns                | 1.4 us                 | 799 ns                 |
-| linux ucontext         |                    |                       |                       |                        |                        |
-| [libgo][5]             |                    |                       |                       |                        |                        |
-| [libco][6]             |                    |                       |                       |                        |                        |
+| 组件(Avg)                   | 协程数：1 切换开销 | 协程数：1000 创建开销 | 协程数：1000 切换开销 | 协程数：30000 创建开销 | 协程数：30000 切换开销 |
+|-----------------------------|--------------------|-----------------------|-----------------------|------------------------|------------------------|
+| 栈大小（如果可指定）        | 16 KB              | 2 MB                  | 2 MB                  | 64 KB                  | 64 KB                  |
+| libcopp                     | 60 ns              | 3.7 us                |  91 ns                | 3.5 us                 |  239 ns                |
+| libcopp+动态栈池            | 60 ns              | 109 ns                |  90 ns                | 261 ns                 |  238 ns                |
+| libcopp+libcotask           | 79 ns              | 4.2 us                |  124 ns               | 3.8 us                 |  338 ns                |
+| libcopp+libcotask+动态栈池  | 80 ns              | 246 ns                |  126 ns               | 340 ns                 |  335 ns                |
+| [libco][6]+静态栈池         | 94 ns              | 7.1 us                |  180 ns               | 5.7 us                 |  451 ns                |
+| [libco][6]（共享栈4K占用）  | 94 ns              | 3.8 us                |  173 ns               | 4.0 us                 |  558 ns                |
+| [libco][6]（共享栈8K占用）  | 95 ns              | 3.8 us                | 1021 ns               | 3.8 us                 | 1810 ns                |
+| [libco][6]（共享栈32K占用） | \-                 | 3.8 us                | 6275 ns               | 4.0 us                 | 6429 ns                |
+| [libgo][5] with boost       | 197 ns             | 5.3 us                |  124 ns               | 2.3 us                 |  441 ns                |
+| [libgo][5] with ucontext    | 539 ns             | 7.0 us                |  482 ns               | 2.7 us                 |  921 ns                |
+| [goroutine(golang)][7]      | 464 ns             | 578 ns                |  538 ns               | 1.4 us                 |  799 ns                |
+| linux ucontext              | 356 ns             | 4.0 us                |  431 ns               | 4.5 us                 |  946 ns                |
+
+libcopp+libcotask比单纯的libcopp多了进程内唯一ID的分配、状态转换和维护、可调用对象和跳转函数直接的转换和事件响应，并且保证了线程安全。工程上一般会用libcotask，但是功能上libcopp才是和其他对比项类似的部分。在压力测试中，也没有包含[libco][6]和[libgo][5]里系统函数hook的部分。
+
+[libgo][5]的作者已经不再建议使用共享栈所以我们没有压测[libgo][5]的共享栈性能。[libgo][5]采用锁实现了线程安全，我们压测过程中没有启动多线程所以测试结果也不包含线程等待的消耗。
+
+[libco][6]仅支持静态栈池，并且静态栈池只是为了减少共享栈时的copy开销，所以[libco][6]也分别对模拟栈使用量为4K、8K和32K时模拟栈池耗尽时的压力测试，可以看到栈使用量较大时，切换的memcpy开销较大。但是在工程中，[libco][6]的栈池也不会只分配一个，所以项目中的真实消耗还是要看最终的命中率，如果栈池剩余量越大，性能更向第一组靠近，否则根据栈使用量向后面靠近。
 
 + libcopp/libcotask测试代码：https://github.com/owt5008137/libcopp/tree/v2/sample
-+ goroutine测试代码: https://gist.github.com/owt5008137/2286768f2586521600c9fd1700cbf845
++ [goroutine][7] 测试代码: https://gist.github.com/owt5008137/1842b56ac1edd5a7db54590d41af1c44#file-goroutine_benchmark-go
++ [libco][6] 测试代码: https://gist.github.com/owt5008137/1842b56ac1edd5a7db54590d41af1c44#file-libco_benchmark-cpp
++ ucontext 测试代码: https://gist.github.com/owt5008137/1842b56ac1edd5a7db54590d41af1c44#file-ucontext_benchmark-cpp
++ [libgo][5] 测试代码: https://gist.github.com/owt5008137/1842b56ac1edd5a7db54590d41af1c44#file-libgo_benchmark-cpp
 
-# 对象路由
-
-统一续期、降级/升级、自动保活、定时保存
-
-## 优化一： IO排队自动化
-
-## 优化二： 快队列
-
-# 设计细节优化
-
-## 调度系统优化
-不再需要全局container
-
-## 统一异步指令流程
-
-## etcd接入抽象层
-
-## hostname判定优化
-
-## simulator的优化和配置的时间单位
-定时器机制、exec_cmd代替insert_cmd
-
-# 优化方向
+{{ <chart> }}
+{
+  "type": "bar",
+  "data": {
+  "labels": [
+    "libcopp",
+    "libcopp+动态栈池",
+    "libcopp+libcotask",
+    "libcopp+libcotask+动态栈池",
+    "libco+静态栈池",
+    "libco+共享栈4K占用",
+    "libco+共享栈8K占用",
+    "libco+共享栈32K占用",
+    "libgo with boost",
+    "libgo with ucontext",
+    "goroutine",
+    "ucontext"
+  ],
+  "datasets": [
+    {
+    "label": "创建耗时【协程数：1000，栈大小2MB】(单位：纳秒)",
+    "data": [
+      3700,
+      109,
+      4200,
+      246,
+      7100,
+      3800,
+      3800,
+      3800,
+      5300,
+      7000,
+      578,
+      4000
+    ],
+    "backgroundColor": [
+      "rgba(255, 99, 132, 0.2)",
+      "rgba(54, 162, 235, 0.2)",
+      "rgba(255, 206, 86, 0.2)",
+      "rgba(75, 192, 192, 0.2)",
+      "rgba(153, 102, 255, 0.2)",
+      "rgba(255, 159, 64, 0.2)"
+    ],
+    "borderColor": [
+      "rgba(255,99,132,1)",
+      "rgba(54, 162, 235, 1)",
+      "rgba(255, 206, 86, 1)",
+      "rgba(75, 192, 192, 1)",
+      "rgba(153, 102, 255, 1)",
+      "rgba(255, 159, 64, 1)"
+    ],
+    "borderWidth": 1
+    }
+  ]
+  },
+  "options": {
+      "title": {
+          "display": true
+      }
+  }
+}
+{{ </chart> }}
 
 [1]: https://github.com/atframework/atsf4g-co/
 [2]: https://github.com/atframework/atsf4g-co/tree/sample_solution
@@ -109,3 +161,7 @@ v2版本在这方面就有了一些优化。基本思路是每个协程执行的
 [4]: http://en.cppreference.com/w/cpp/concept/TrivialType
 [5]: https://github.com/yyzybb537/libgo
 [6]: https://github.com/Tencent/libco
+[7]: https://golang.org/
+[8]: https://golang.org/dl/#go1.10.2
+[9]: https://www.boost.org/
+[10]: https://www.boost.org/users/history/version_1_67_0.html
