--- a/source/post/2016/1273.md
+++ b/source/post/2016/1273.md
@@ -208,7 +208,7 @@ Alice   123
 Phone:      18612345678 HOME
 ```
 
-这样的话，仅仅在尝试解包不存在的数据时会又一次RTTI的开销和两个table的开销。而如果数据存在的话，开销和之前没有变化，我觉得还是可以接受的。
+这样的话，仅仅在尝试解包不存在的数据时会有一次RTTI的开销和两个table的开销。而如果数据存在的话，开销和之前没有变化，我觉得还是可以接受的。
 另外 https://github.com/cloudwu/pbc/issues/27 里提到的BUG也就没有了。
 
 后记
@@ -218,3 +218,5 @@ Phone:      18612345678 HOME
 这个BUG很容带来使用者的误解而且容易遗漏。因为一个不正确的数据往往不会立即引发问题，而是绕了好几轮以后才发现。所以目前我们的client的pbc还是使用这个打了patch的分支。
 
 分支地址是： https://github.com/owent-contrib/pbc/
+
+**最新进展： 此PR已被云风官方仓库合入**
