--- a/source/post/2018/1806.md
+++ b/source/post/2018/1806.md
@@ -4,7 +4,7 @@ categories:
   - Article
   - Blablabla
 date: 2018-05-28 20:23:31
-draft: true
+draft: false
 id: 1806
 tags: 
   - libcopp
@@ -92,8 +92,81 @@ libcopp+libcotask比单纯的libcopp多了进程内唯一ID的分配、状态转
 + ucontext 测试代码: https://gist.github.com/owt5008137/1842b56ac1edd5a7db54590d41af1c44#file-ucontext_benchmark-cpp
 + [libgo][5] 测试代码: https://gist.github.com/owt5008137/1842b56ac1edd5a7db54590d41af1c44#file-libgo_benchmark-cpp
 
-### 创建耗时对比【协程数：1000，栈大小2MB】
 
+### 【协程数：1，栈大小16KB】 - 切换耗时对比
+
+{{< chart >}}
+{
+  "type": "horizontalBar",
+  "data": {
+  "labels": [
+    "libcopp",
+    "libcopp+动态栈池",
+    "libcopp+libcotask",
+    "libcopp+libcotask+动态栈池",
+    "libco+静态栈池",
+    "libco（共享栈4K占用）",
+    "libco（共享栈8K占用）",
+    "libco（共享栈32K占用）",
+    "libgo with boost",
+    "ucontext",
+    "goroutine",
+    "libgo with ucontext"
+  ],
+  "datasets": [
+    {
+    "label": "切换耗时对比【协程数：1，栈大小16KB】",
+    "data": [
+      60,
+      60,
+      79,
+      80,
+      94,
+      94,
+      95,
+      197,
+      356,
+      464,
+      539
+    ],
+    "backgroundColor": [
+      "rgba(255, 99, 132, 0.5)",
+      "rgba(54, 162, 235, 0.5)",
+      "rgba(255, 206, 86, 0.5)",
+      "rgba(75, 192, 192, 0.5)",
+      "rgba(153, 102, 255, 0.5)",
+      "rgba(255, 159, 64, 0.5)",
+      "rgba(54, 192, 192, 0.5)",
+      "rgba(92, 102, 255, 0.5)",
+      "rgba(255, 232, 86, 0.5)",
+      "rgba(22, 130, 303, 0.5)",
+      "rgba(223, 67, 100, 0.5)",
+      "rgba(223, 127, 32, 0.5)"
+    ],
+    "borderColor": [
+      "rgba(255, 99, 132, 1)",
+      "rgba(54, 162, 235, 1)",
+      "rgba(255, 206, 86, 1)",
+      "rgba(75, 192, 192, 1)",
+      "rgba(153, 102, 255, 1)",
+      "rgba(255, 159, 64, 1)",
+      "rgba(54, 192, 192, 1)",
+      "rgba(92, 102, 255, 1)",
+      "rgba(255, 232, 86, 1)",
+      "rgba(22, 130, 303, 1)",
+      "rgba(223, 67, 100, 1)",
+      "rgba(223, 127, 32, 1)"
+    ],
+    "borderWidth": 1,
+    "maxBarThickness": 5
+    }
+  ]
+  },
+  "options": {}
+}
+{{< /chart >}}
+
+### 【协程数：1000，栈大小2MB】 - 创建耗时对比
 {{< chart >}}
 {
   "type": "horizontalBar",
@@ -157,13 +230,237 @@ libcopp+libcotask比单纯的libcopp多了进程内唯一ID的分配、状态转
       "rgba(223, 67, 100, 1)",
       "rgba(223, 127, 32, 1)"
     ],
-    "borderWidth": 1
+    "borderWidth": 1,
+    "maxBarThickness": 5
     }
   ]
   },
   "options": {}
 }
 {{< /chart >}}
+
+### 【协程数：1000，栈大小2MB】 - 切换耗时对比
+
+{{< chart >}}
+{
+  "type": "horizontalBar",
+  "data": {
+  "labels": [
+    "libcopp+动态栈池",
+    "libcopp",
+    "libcopp+libcotask",
+    "libgo with boost",
+    "libcopp+libcotask+动态栈池",
+    "libco+共享栈4K占用",
+    "libco+静态栈池",
+    "ucontext",
+    "libgo with ucontext",
+    "goroutine",
+    "libco+共享栈8K占用",
+    "libco+共享栈32K占用"
+  ],
+  "datasets": [
+    {
+    "label": "切换耗时对比【协程数：1000，栈大小2MB】",
+    "data": [
+      90,
+      91,
+      124,
+      124,
+      126,
+      173,
+      180,
+      431,
+      482,
+      538,
+      1021,
+      6275
+    ],
+    "backgroundColor": [
+      "rgba(255, 99, 132, 0.5)",
+      "rgba(54, 162, 235, 0.5)",
+      "rgba(255, 206, 86, 0.5)",
+      "rgba(75, 192, 192, 0.5)",
+      "rgba(153, 102, 255, 0.5)",
+      "rgba(255, 159, 64, 0.5)",
+      "rgba(54, 192, 192, 0.5)",
+      "rgba(92, 102, 255, 0.5)",
+      "rgba(255, 232, 86, 0.5)",
+      "rgba(22, 130, 303, 0.5)",
+      "rgba(223, 67, 100, 0.5)",
+      "rgba(223, 127, 32, 0.5)"
+    ],
+    "borderColor": [
+      "rgba(255, 99, 132, 1)",
+      "rgba(54, 162, 235, 1)",
+      "rgba(255, 206, 86, 1)",
+      "rgba(75, 192, 192, 1)",
+      "rgba(153, 102, 255, 1)",
+      "rgba(255, 159, 64, 1)",
+      "rgba(54, 192, 192, 1)",
+      "rgba(92, 102, 255, 1)",
+      "rgba(255, 232, 86, 1)",
+      "rgba(22, 130, 303, 1)",
+      "rgba(223, 67, 100, 1)",
+      "rgba(223, 127, 32, 1)"
+    ],
+    "borderWidth": 1,
+    "maxBarThickness": 5
+    }
+  ]
+  },
+  "options": {}
+}
+{{< /chart >}}
+
+
+### 【协程数：30000，栈大小64KB】 - 创建耗时对比
+{{< chart >}}
+{
+  "type": "horizontalBar",
+  "data": {
+  "labels": [
+    "libcopp+动态栈池",
+    "libcopp+libcotask+动态栈池",
+    "goroutine",
+    "libgo with boost",
+    "libgo with ucontext",
+    "libcopp",
+    "libcopp+libcotask",
+    "libco（共享栈8K占用）",
+    "libco（共享栈4K占用）",
+    "libco（共享栈32K占用）",
+    "ucontext",
+    "libco+静态栈池"
+  ],
+  "datasets": [
+    {
+    "label": "创建耗时对比【协程数：30000，栈大小64KB】(单位：纳秒)",
+    "data": [
+      261,
+      340,
+      1400,
+      2300,
+      2700,
+      3500,
+      3800,
+      3800,
+      4000,
+      4000,
+      4500,
+      5700
+    ],
+    "backgroundColor": [
+      "rgba(255, 99, 132, 0.5)",
+      "rgba(54, 162, 235, 0.5)",
+      "rgba(255, 206, 86, 0.5)",
+      "rgba(75, 192, 192, 0.5)",
+      "rgba(153, 102, 255, 0.5)",
+      "rgba(255, 159, 64, 0.5)",
+      "rgba(54, 192, 192, 0.5)",
+      "rgba(92, 102, 255, 0.5)",
+      "rgba(255, 232, 86, 0.5)",
+      "rgba(22, 130, 303, 0.5)",
+      "rgba(223, 67, 100, 0.5)",
+      "rgba(223, 127, 32, 0.5)"
+    ],
+    "borderColor": [
+      "rgba(255, 99, 132, 1)",
+      "rgba(54, 162, 235, 1)",
+      "rgba(255, 206, 86, 1)",
+      "rgba(75, 192, 192, 1)",
+      "rgba(153, 102, 255, 1)",
+      "rgba(255, 159, 64, 1)",
+      "rgba(54, 192, 192, 1)",
+      "rgba(92, 102, 255, 1)",
+      "rgba(255, 232, 86, 1)",
+      "rgba(22, 130, 303, 1)",
+      "rgba(223, 67, 100, 1)",
+      "rgba(223, 127, 32, 1)"
+    ],
+    "borderWidth": 1,
+    "maxBarThickness": 5
+    }
+  ]
+  },
+  "options": {}
+}
+{{< /chart >}}
+
+### 【协程数：30000，栈大小64KB】 - 切换耗时对比
+{{< chart >}}
+{
+  "type": "horizontalBar",
+  "data": {
+  "labels": [
+    "libcopp+动态栈池",
+    "libcopp",
+    "libcopp+libcotask+动态栈池",
+    "libcopp+libcotask",
+    "libgo with boost",
+    "libco+静态栈池",
+    "libco（共享栈4K占用）",
+    "goroutine",
+    "libgo with ucontext",
+    "ucontext",
+    "libco（共享栈8K占用）",
+    "libco（共享栈32K占用）"
+  ],
+  "datasets": [
+    {
+    "label": "切换耗时对比【协程数：30000，栈大小64KB】",
+    "data": [
+      238,
+      239,
+      335,
+      338,
+      441,
+      451,
+      558,
+      799,
+      921,
+      946,
+      1810,
+      6429
+    ],
+    "backgroundColor": [
+      "rgba(255, 99, 132, 0.5)",
+      "rgba(54, 162, 235, 0.5)",
+      "rgba(255, 206, 86, 0.5)",
+      "rgba(75, 192, 192, 0.5)",
+      "rgba(153, 102, 255, 0.5)",
+      "rgba(255, 159, 64, 0.5)",
+      "rgba(54, 192, 192, 0.5)",
+      "rgba(92, 102, 255, 0.5)",
+      "rgba(255, 232, 86, 0.5)",
+      "rgba(22, 130, 303, 0.5)",
+      "rgba(223, 67, 100, 0.5)",
+      "rgba(223, 127, 32, 0.5)"
+    ],
+    "borderColor": [
+      "rgba(255, 99, 132, 1)",
+      "rgba(54, 162, 235, 1)",
+      "rgba(255, 206, 86, 1)",
+      "rgba(75, 192, 192, 1)",
+      "rgba(153, 102, 255, 1)",
+      "rgba(255, 159, 64, 1)",
+      "rgba(54, 192, 192, 1)",
+      "rgba(92, 102, 255, 1)",
+      "rgba(255, 232, 86, 1)",
+      "rgba(22, 130, 303, 1)",
+      "rgba(223, 67, 100, 1)",
+      "rgba(223, 127, 32, 1)"
+    ],
+    "borderWidth": 1,
+    "maxBarThickness": 5
+    }
+  ]
+  },
+  "options": {}
+}
+{{< /chart >}}
+
+总体来说，[libcopp][3]和[libcotask][3]还是很有优势的。特别是动态栈池，几乎可以让创建开销逼近上下文切换，可以放心地无脑创建协程了。这里面需要特别说明一下的是[goroutine][7]和[libco][6]。goroutine的切换并没有优势，但是创建性能还是挺高的，原因之一是我对[go][7]不是很熟，不太清楚怎么让go的cachemiss掉，看起来它自带一些池子的功能。而[libco][6]是支持静态栈池的，如果静态的栈池足够大或者使用量不大的时候，也能有不错的切换性能（不需要memcpy栈），只是池子用完以后波动会很大。
 
 [1]: https://github.com/atframework/atsf4g-co/
 [2]: https://github.com/atframework/atsf4g-co/tree/sample_solution
