--- a/source/post/2018/1807.md
+++ b/source/post/2018/1807.md
@@ -35,9 +35,23 @@ type: post
 
 ## 优化一： IO排队自动化
 
-第一个优化是IO自动排队。所谓IO就是读取和保存的任务。在之前的设计中，如果缓存不存在的时候同时来多个消息，则会拉取多次。虽然多次取回后会丢弃冗余的数据，逻辑上不会有问题，但是还是不必要地发起了拉取请求。同时在保存地时候的次序也是依赖了数据库层的顺序。而这里的IO自动排队就是解决这个问题，在拉取和保存的时候收敛到一处，并且还可以自动合并保存版本。
+第一个优化是IO自动排队。所谓IO就是读取和保存的任务。在之前的设计中，如果缓存不存在的时候同时来多个消息，则会拉取多次。虽然多次取回后会丢弃冗余的数据，逻辑上不会有问题，但是还是不必要地发起了拉取请求。
+
+![1807-01.png](1807-01.dot.png)
+
+当然，如果路由缓存本身就存在，就也不需要拉取，直接回并行执行所有的任务。
+
+![1807-02.png](1807-02.dot.png)
+
+同时在保存地时候的次序也是依赖了数据库层的顺序。而这里的IO自动排队就是解决这个问题，在拉取和保存的时候收敛到一处，并且还可以自动合并保存版本。
+
+![1807-03.png](1807-03.dot.png)
+
+比如上面所示的流程里，针对于某个对象，Task 2和Task 3在准备保存的时候Task 1在执行保存任务，那么Task 2和Task 3会等Task 1返回后再次执行保存。这时候因为Task 2和Task 3的数据都已经更新了，所以只需要保存一次最新的数据到数据库，就同时保证了Task 2和Task 3的保存都成功完成。这种情况下就产生了一次数据的Merge并且减少了一次保存开销。
 
 ## 优化二： 快队列
+
+我们在路由系统设计了一个全局定时器管理器，统一管理对象的超时降级、定时保存和缓存淘汰问题。但是当定时器触发的时候可能这个对象正处于某种操作中，比如正在执行IO操作而不能立刻降级或者移除，这时候我们回尝试重新将其插入到下一轮定时器中。但是原先只有一种定时器，也就是下一次定时器操作可能是几分钟以后了。所以这里我又加了一个块队列，这种情况下只要等待很短的时间后就可以重试了。这样可以加快出现冲突时的资源回收。
 
 # 设计细节优化
 
