--- a/source/post/2018/1806.md
+++ b/source/post/2018/1806.md
@@ -28,13 +28,13 @@ type: post
 
 其次就是优化结构布局以优化内存碎片问题。在v1版本里，一个很重要的设计要点是各项组件可拆卸，就是说一些设计模式层面的东西比如协程任务、任务管理、等待和依赖关系等是可选的。同时栈分配器也可以是多种选择，采用系统地址映射加保护帧、采用malloc或者自定义分配器。为了各项组件尽可能解耦和易于组合，模块间较少采用组合关系，较多采用了引用关系，原来的协程任务结构大致上是这样的。
 
-![1806-01.png](1806-01.png)
+![1806-01.png](1806-01.dot.png)
 
 可以看得出来一个协程运行的时候对象数量很多。这样的话碎片也很多，虽然现代化的malloc实现能大幅缓解碎片问题，但是终归是有一些开销。上面图里是一个比较完整的结构关系，实际使用中有些组件如果不需要是可以移除掉的，比如 **cotask** 相关的部分。
 
 v2版本在这方面就有了一些优化。基本思路是每个协程执行的时候都必然会分配一个执行栈，那么其实我们在执行栈上开辟一块空间放这些对象(执行栈是自顶向下增长，所以可以放到栈空间的最后面)。同时还可以开辟出一块用户私有数据块，用于方便使用者可以存放一些 [TrivialType][4] 的私有数据，也不需要额外的动态分配。当然，各项组件的可自由组装和裁剪的特性也是必须保留的，我们的组织结构如下图所示:
 
-![1806-02.png](1806-02.png)
+![1806-02.png](1806-02.dot.png)
 
 ## 栈池
 
